Bug 42676 - Text selection broken in skype [SNA]
Summary: Text selection broken in skype [SNA]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-07 11:11 UTC by Clemens Eisserer
Modified: 2011-11-07 12:22 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot chat window (57.89 KB, image/png)
2011-11-07 11:11 UTC, Clemens Eisserer
no flags Details
skype menu (20.50 KB, image/png)
2011-11-07 11:12 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2011-11-07 11:11:19 UTC
Created attachment 53261 [details]
screenshot chat window

I am using the statically linked skype-2.2.0.35 binary, selecting text in the chat window characters results in garbled text rendering.
Also menu-entries which are renered selected result in garbled text.

I wasn't able to reproduce the issue with QT4 applications shipped, the version I see the issue is available here: http://www.skype.com/intl/de/get-skype/on-your-computer/linux/downloading.static

intel i945GM
intel-git
libdrm-2.4.27
pixman-0.23.8
linux-3.1.0
xorg 1.11.1
Comment 1 Clemens Eisserer 2011-11-07 11:12:47 UTC
Created attachment 53262 [details]
skype menu
Comment 2 Chris Wilson 2011-11-07 12:12:18 UTC
Having just found a very, very similar bug, I think this is going to be fixed by:

commit 8e775cecccebe543d344721d45b2d43ee9f122b3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Nov 7 20:01:33 2011 +0000

    sna/gen3: Fix false reduction of ComponentAlpha with white source
    
    The principle behind the opertator reduction of WHITE * maskca is valid,
    except that we failed to account for the src/mask transposition when
    emitting the vertices - garbage ensued.
    
    Given that we agressively reduce the shader required for WHITE * maskca,
    it does not seem worthwhile to special case the primitive emitter as
    well.
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42676
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Clemens Eisserer 2011-11-07 12:22:59 UTC
I can confirm the bug is fixed by your patch. Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.